--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.7.+'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.firebaseui:firebase-ui-database:2.1.1'
+    implementation 'com.google.android.gms:play-services-auth:11.0.2'
     testImplementation 'junit:junit:4.12'
 
 
